Remove interface that is never used.